Feat/map api (#19)
* refactor: rename and place observation response struct

* fix: add swaggo into setup-dev script

* feat: simplify observation overview stats

* feat: add block to filter

* feat: create observations_with_details view to simplify query

* feat: add site_code filter

* feat: add filter by taxa

* feat: add filter by common name

* feat: observations time series, group by native

* feat: add distinc species count in time series

* feat: add observation stats by sites

* feat: remove unused endpoints

* refactor: extract parse stats input function

* feat: add observation by blocks

* fix: standarise all error handling, update README

* feat: add CORS middleware

* doc: add import data procedures in README
